[project]
name = "quizzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[openai]>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.9",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "aiofiles>=24.1.0",
    "pydantic>=2.13.4",
]

[project.scripts]
quizzer = "src.main:cli"
quizzer-api = "src.api.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
